plugins {
    id 'java'
    id 'war'
}

group 'dev.ambryn'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.1'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {

    compileOnly('jakarta.platform:jakarta.jakartaee-web-api:9.1.0')
    testImplementation('jakarta.platform:jakarta.jakartaee-web-api:9.1.0')

    implementation('io.jsonwebtoken:jjwt:0.9.1')
    implementation("javax.xml.bind:jaxb-api:2.3.1")

    // Needed for Bean validation test because test environment doesn't run on Glassfish server
    testImplementation('org.hibernate.validator:hibernate-validator:8.0.0.Final')
    testImplementation('org.glassfish.expressly:expressly:5.0.0')
    testImplementation('org.hibernate.validator:hibernate-validator-cdi:8.0.0.Final')

    // Needed for JAX RS (REST) tests
    testImplementation("org.glassfish.jersey.core:jersey-common:3.0.4")
    testImplementation("jakarta.ws.rs:jakarta.ws.rs-api:3.0.0")

    // Logback
    implementation('ch.qos.logback:logback-classic:1.4.5')
    // https://mvnrepository.com/artifact/org.glassfish.soteria/jakarta.security.enterprise
    implementation group: 'org.glassfish.soteria', name: 'jakarta.security.enterprise', version: '3.0.2'

    // Lombok
    implementation('org.projectlombok:lombok:1.18.26')


    implementation("org.mariadb.jdbc:mariadb-java-client:3.0.9")
    // https://mvnrepository.com/artifact/org.apache.commons/commons-text
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}